# rmath

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  macros.rs
src/algebra/: mod.rs  transform.rs
src/algebra/mat/: mat2d.rs  mat2f.rs  mat3d.rs  mat3f.rs  mat4d.rs  mat4f.rs  mod.rs
src/algebra/vec/: mod.rs  vec2d.rs  vec2f.rs  vec3d.rs  vec3f.rs  vec4d.rs  vec4f.rs
src/color/: mod.rs  rgb.rs  rgb24.rs  rgba.rs  rgba32.rs  rgbaf.rs  rgbf.rs
src/geometry/: bounds3.rs  mod.rs  ray.rs
src/sampling/: mod.rs
src/sampling/rng/: mod.rs  pcg32.rs
